--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
 
 .col-header {
   width: 150px;
+  text-align: center;
   box-shadow: 4px 4px 9px rgba(198, 198, 198, 0.36);
   border-radius: 20px;
   padding: 0.8rem 1rem;
@@ -31,7 +32,7 @@ body {
 
 .item {
   width: 150px;
-  height: 66px;
+  /* height: 66px; */
   border: 1px solid #eee;
   box-shadow: 4px 4px 9px rgba(198, 198, 198, 0.36);
   border-radius: 20px;
@@ -61,4 +62,8 @@ body {
 
 .done {
   background: linear-gradient(90deg, #84fab0 0%, #8fd3f4 100%);
+}
+
+.hold {
+  border: solid 2px rgb(158, 158, 158);
 }
