--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 
 .item {
   width: 150px;
-  /* height: 66px; */
+  /* height: 50px; */
   border: 1px solid #eee;
   box-shadow: 4px 4px 9px rgba(198, 198, 198, 0.36);
   border-radius: 20px;
@@ -49,7 +49,7 @@ body {
 
 .placeholder {
   width: 150px;
-  height: 66px;
+  height: 50px;
 }
 
 .start {
@@ -66,4 +66,13 @@ body {
 
 .hold {
   border: solid 2px rgb(158, 158, 158);
+}
+
+.hide {
+  display: none;
+}
+
+.hovered {
+  border: 2px solid #8ed7ed;
+  border-radius: 20px;
 }
